jalal_salehi/k8s/prod/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web
  namespace: prod
  labels:
    name: go-web
    instance: go-web
spec:
  replicas: 3
  selector:
    matchLabels:
      name: go-web
      instance: go-web
  template:
    metadata:
      labels:
        name: go-web
        instance: go-web
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: go-web
          image: docker.registry.local/go-k8s-project:latest
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
