jalal_salehi/k8s/prod/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web
  namespace: prod
  labels:
    name: go-web
    instance: go-web
spec:
  ingressClassName: nginx
  rules:
    - host: "go-prod.salehi.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-web
                port:
                  number: 80
